# rabbit-keypoint-detection

./: .gitignore  README.md  requirements.txt
web_app/backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
web_app/backend/app/: .env.example
web_app/backend/app/core/: settings.py
web_app/backend/authentication/: forms.py  urls.py  views.py
web_app/backend/authentication/jinja2/auth/: login.html  register.html
web_app/backend/core/: settings.py  urls.py
web_app/backend/index/: views.py
web_app/backend/model_inference/: admin.py  apps.py  models.py
web_app/backend/model_inference/migrations/: 0001_initial.py
web_app/backend/model_training/: admin.py  models.py
web_app/backend/model_training/migrations/: 0001_initial.py
web_app/backend/static/: style.css
web_app/backend/templates/base/: base.html  navbar.html
web_app/backend/templates/index/: index.html
web_app/backend/train_datasets_manager/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
web_app/backend/train_datasets_manager/jinja2/train_datasets_manager/: delete.html  detail.html  edit.html  list.html  upload.html
web_app/backend/train_datasets_manager/migrations/: 0001_initial.py  0002_alter_traindataset_file_path.py  0003_rename_file_path_traindataset_file.py
web_app/backend/utils/: file_uploads.py
web_app/backend/video_manager/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
web_app/backend/video_manager/migrations/: 0001_initial.py  0002_alter_inferencevideo_file_path.py  0003_rename_file_path_inferencevideo_file.py
(+137 files in other folders)
