[tool.poetry]
name = "Animals keypoint detection tool"
version = "0.1.0"
description = ""
authors = ["HidenYT <buharev2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
